<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:background="@color/colorBlack"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">
    <ImageView
            android:id="@+id/btn_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="16dp"
            android:src="@drawable/ic_chevron_left_black"
            android:contentDescription="@string/text_back_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            app:tint="@color/colorWhite" />
    <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_preview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/til_edit_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:text="@string/text_preview"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textSize="32sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <com.google.android.material.textview.MaterialTextView
            android:id="@+id/btn_save"
            android:text="@string/text_save"
            android:textColor="@color/colorWhite"
            android:textSize="23sp"
            app:layout_constraintBottom_toBottomOf="@id/text_preview"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <ImageView
            android:id="@+id/btn_share"
            android:src="@drawable/ic_share_white"
            android:layout_marginEnd="32dp"
            android:contentDescription="@string/text_share_button"
            app:layout_constraintTop_toTopOf="@id/text_preview"
            app:layout_constraintBottom_toBottomOf="@id/text_preview"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="28dp"
            android:layout_height="28dp"/>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_edit_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tools_container"
            app:boxCornerRadiusTopStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxBackgroundColor="@color/colorWhite"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:scrollbars="vertical"
            android:layout_margin="16dp"
            android:layout_width="0dp"
            android:layout_height="0dp">
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_content"
                android:gravity="start|top"
                tools:text="test"
                android:enabled="false"
                android:textIsSelectable="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>
    <View
            android:id="@+id/tools_container"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_edit_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/rounded_corner_tools_container"
            android:backgroundTint="@color/colorWhite"
            android:layout_margin="16dp"
            android:layout_width="0dp"
            android:layout_height="80dp"/>
        <ImageView
                android:id="@+id/btn_edit"
                android:src="@drawable/ic_mode_edit_black"
                android:contentDescription="@string/text_edit_button"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="@id/tools_container"
                app:layout_constraintTop_toTopOf="@id/tools_container"
                app:layout_constraintBottom_toBottomOf="@id/tools_container"
                android:layout_marginStart="48dp"
                android:layout_width="38dp"
                android:layout_height="38dp"/>
        <ImageView
                android:id="@+id/btn_copy"
                android:src="@drawable/ic_content_copy_black"
                android:visibility="visible"
                app:layout_constraintStart_toEndOf="@id/btn_edit"
                app:layout_constraintTop_toTopOf="@id/tools_container"
                app:layout_constraintBottom_toBottomOf="@id/tools_container"
                app:layout_constraintEnd_toStartOf="@id/btn_delete"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:contentDescription="@string/text_copy_button"/>
        <ImageView
                android:id="@+id/btn_delete"
                android:src="@drawable/ic_delete_black"
                android:visibility="visible"
                android:contentDescription="@string/text_delete_button"
                app:layout_constraintTop_toTopOf="@id/tools_container"
                app:layout_constraintEnd_toEndOf="@id/tools_container"
                app:layout_constraintBottom_toBottomOf="@id/tools_container"
                android:layout_marginEnd="48dp"
                android:layout_width="38dp"
                android:layout_height="38dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>