<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:background="@color/colorBlack"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">
    <ImageView
            android:id="@+id/scanned_text_btn_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_chevron_left_black_24dp"
            android:contentDescription="@string/text_back_button"
            android:tint="@color/colorWhite"
            android:layout_width="48dp"
            android:layout_height="48dp"/>
    <com.google.android.material.textview.MaterialTextView
            android:id="@+id/title_preview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/til_edit_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:text="@string/text_preview"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textSize="32sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <com.google.android.material.textview.MaterialTextView
            android:id="@+id/scanned_text_btn_save"
            android:text="@string/text_save"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/title_preview"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_edit_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/scanned_text_btn_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tools_container"
            app:boxCornerRadiusTopStart="@dimen/rounded_radius_on_preview"
            app:boxCornerRadiusTopEnd="@dimen/rounded_radius_on_preview"
            app:boxCornerRadiusBottomEnd="@dimen/rounded_radius_on_preview"
            app:boxCornerRadiusBottomStart="@dimen/rounded_radius_on_preview"
            app:boxBackgroundColor="@color/colorWhite"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:scrollbars="vertical"
            android:layout_margin="16dp"
            android:layout_width="0dp"
            android:layout_height="0dp">
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/scanned_text_edit_content"
                android:gravity="start|top"
                tools:text="test"
                android:enabled="false"
                android:textIsSelectable="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>
    <RelativeLayout
            android:id="@+id/tools_container"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rounded_corner_tools_container"
            android:backgroundTint="@color/colorWhite"
            android:padding="20dp"
            android:paddingStart="42dp"
            android:paddingEnd="42dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <ImageView
                android:id="@+id/scanned_text_btn_edit"
                android:src="@drawable/ic_mode_edit_black_24dp"
                android:contentDescription="@string/text_edit_button"
                android:layout_alignParentStart="true"
                android:layout_width="38dp"
                android:layout_height="38dp"/>
        <ImageView
                android:id="@+id/scanned_text_btn_copy"
                android:src="@drawable/ic_content_copy_black_24dp"
                android:layout_centerInParent="true"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:contentDescription="@string/text_copy_button"/>
        <ImageView
                android:id="@+id/scanned_text_btn_delete"
                android:src="@drawable/ic_delete_black_24dp"
                android:contentDescription="@string/text_delete_button"
                android:layout_alignParentEnd="true"
                android:layout_width="38dp"
                android:layout_height="38dp"/>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>